--- a/website.css
+++ b/website.css
@@ -1,25 +1,79 @@
 * {
-    text-decoration: none; margin-top: 0; margin-left: 0; margin-right: 0;
+    text-decoration: none; 
+    margin: 0; padding: 0; 
+    box-sizing: border-box;
+    
 }
 
 .main { 
-    margin-top: 0 ;
+    /* margin-top: 0 ;
+    margin-bottom: 0; */
+    border-color: goldenrod;
+    border-style: dashed;
+    border-width: 2px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    line-height: 2;
+
+    
 }
-
-
 
 .navbar {
     background: rgb(30, 30, 42); font-family:'Calibri'; padding-right: 15px; padding-left: 15px ; margin-top: 0 ; padding-top: 0 ;
+    
+    border-color: goldenrod;
+    border-style: dashed;
+    border-width: 1px;
 }
 
 .navdiv {
     display: flex; align-items: center; justify-content: space-between; margin-top: 0 ; padding-top: 0 ;
+    
+    border-color: goldenrod;
+    border-style: dashed;
+    border-width: 1px;
+}
+
+.section-page-1 {
+    border-color: goldenrod;
+    border-style: dashed;
+    border-width: 2px;
+
+    display: flex;  
+    justify-content: flex-end;
+    
+    
+    
+    
+
+    flex: 1;
+    
+
+}
+
+.intro-text { 
+    border-color: goldenrod;
+    border-style: dashed;
+    border-width: 2px;
+
+    display: flex; 
+    flex-wrap: wrap;
+
+    
 }
 
 .home-image {
-    display: flex;
-    /* width: 75vh; */
-    height:400px;
+   
+   height: 400px;
+    
+    
+
+    border-color: goldenrod;
+    border-style: dashed;
+    border-width: 2px;
 }
 
 .logo a {
@@ -36,13 +90,18 @@ li a {
 
 .footer {
     display: flex;
-    position: fixed;
+    
+    /* position: fixed; */
     /* left: 0 ; */
-    bottom: 0;
+    /* bottom: 0; */
     width: 100%;
     background-color: white;
     color: black;
     text-align: right;
+
+    border-color: goldenrod;
+    border-style: dashed;
+    border-width: 2px;
     
 }
 
@@ -56,3 +115,4 @@ li a {
     
     
 }
+
